# Security

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  import-precheck-fix-notes-2026-06-09.md  manual-image-text.txt  pyproject.toml  requirements-gnn-pyg.txt  requirements-gnn.txt  requirements.txt  server.py  报告.md
.supplyguard/: cicd.yml  trust-policy.yml
cases/: README.md
data/: import_example.json  sample_project.json
docs/: api.md  course-design-report.md  graphrag-gnn-environment.md  graphrag-gnn-implementation.md  graphrag-gnn-optimization-report.md  index.md  supplyguard-competition-ppt-outline.md  vibe-coding-trace-report-redesign.md
frontend/: index.html  package-lock.json  package.json
mcp/: README.md  package-lock.json  package.json
scripts/: run-case-replay.ps1
static/: app.js  index.html  styles.css
supplyguard/: __init__.py  agent_backend.py  app.py  artifact_trust.py  cicd_audit.py  cli.py  code_audit.py  config.py  conversations.py  dependency_audit.py  evidence_discovery.py  gate.py  gnn_models.py  gnn_risk.py  graph_rag.py  graph_rag_context.py  graph_rag_intent.py  graph_rag_ranker.py  graph_rag_retrievers.py  investigation_agent.py  knowledge_graph.py  llm_assistant.py  log_audit.py  multimodal_audit.py  package_embeddings.py  project_imports.py  workspaces.py
sysml_docgen/: __init__.py  app.py  auth.py  config.py  docgen.py  files.py  metamodel.py  ops.py  repository.py  store.py  xmi.py
tests/: test_agent_workspace_writeback.py  test_dependency_audit_rubygems.py  test_dependency_gnn_serialization.py  (+20 more)
(+386 files in other folders)
