[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supplyguard-kg"
version = "0.1.0"
description = "LLM and security knowledge graph platform for supply chain attack detection and application security audit."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "PyYAML>=6.0,<7.0",
  "bandit>=1.7,<2.0",
  "checkov>=3.2,<4.0",
]

[tool.setuptools.packages.find]
include = ["supplyguard*"]
